Update Raniere Silva's bio

--- a/_includes/people/silva_raniere.html
+++ b/_includes/people/silva_raniere.html
@@ -1,11 +1,11 @@
 <p id="silva_raniere" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/silva_raniere.jpg' alt='Raniere Silva' />">
     <span class="person">Raniere Silva</span>
     has a BSc (Applied Mathematics) from the University of Campinas.
-    His focus is in free/open software for the collaborative development of robust,
-    reproducible, and scalable software tools for computational
-    science and open science/access.
+    He works for the Software Sustainable Institute and the University of
+    Manchester trying to create a community around
+    "Better Software, Better Research".
     <br/>
-    <strong>Steering Committee</strong>
+    <strong>Steering Committee (2015 and 2016)</strong>
     <br/>
     <strong>Maintainer: tools</strong>
 </p>
