--- a/_includes/people/mills_b.html
+++ b/_includes/people/mills_b.html
@@ -1,10 +1,8 @@
 <p id="mills_b" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/mills_b.jpg' alt='Bill Mills' />">
-    <span class="person">Bill Mills</span> is a physicist and
-    community manager for
-    the <a href="http://mozillascience.org/">Mozilla Science Lab</a>,
-    an open science initiative of the Mozilla Foundation. Prior to
-    joining Mozilla, Bill worked as a software developer at TRIUMF,
-    Canada's national lab for nuclear and particle physics, where he
-    focused on overhauling software development and use, and worked on
-    UI and UX for next-generation many-user experiments.
+    <span class="person">Bill Mills</span> is a freelance scientific
+    software developer and open science advocate, currently at TRIUMF,
+    Canada's national lab for nuclear and particle physics. Bill sits
+    on the 2016 Software Carpentry Steering Committee, and has been 
+    teaching for SWC since early 2014. He divides his time between
+    Vancouver and New York City.
 </p>
