--- a/_includes/people/srinath_ashwin.html
+++ b/_includes/people/srinath_ashwin.html
@@ -1,11 +1,19 @@
 <p id="srinath_ashwin" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/srinath_ashwin.jpg' alt='Ashwin Srinath' />">
     <span class="person">Ashwin Srinath</span>
-    is a Master's student in Mechanical Engineering&mdash;passing off
-    as a computer scientist&mdash;at Clemson University, where he does
-    research in high-performance computational fluid dynamics. He
-    works with Python as much as possible, but can be persuaded to
-    code in C, C++ or Fortran.
+    is a research associate at Clemson University's
+    Cyberinfrastructure Technology Integration (CITI) group
+    as well as a Ph.D. candidate in Mechanical Engineering
+    at Clemson University,
+    His research areas include computational fluid dynamics,
+    and high-performance computing.
+    He spends most days programming and making mistakes,
+    and some days teaching others how not to make them.
     <br/>
     <strong>Maintainer: <a href="{{site.github_url}}/matlab-novice-inflammation">Programming with MATLAB</a>, 
     <a href="{{site.github_url}}/shell-novice">The Unix Shell</a></strong>
+    <strong>Maintainer: <a href="{{site.github_url}}/shell-novice">The Unix Shell</a></strong>
 </p>
+
+
+
+
