--- a/_includes/people/williams_jason.html
+++ b/_includes/people/williams_jason.html
@@ -1,13 +1,10 @@
 <p id="williams_jason" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/williams_jason.jpg' alt='Jason Williams' />">
     <span class="person">Jason Williams</span>
-    is the Education, Outreach, and Training lead for the iPlant Collaborative,
-    where he organizes, manages, and instructs more than a dozen annual workshops.
-    He has been instructional staff at Cold Spring Harbor Laboratory's DNA Learning Center for the past 5 years,
-    and been research staff at Cold Spring Harbor Laboratory for 5 years prior to that.
-    Besides his position at iPlant,
-    Jason has a faculty position at Yeshiva University in New York,
-    where he manages a research program for their Girl's High School,
-    and is also a member of the Scientific Training Advisory Board for the Genome Analysis Centre in Norwich, UK.
+Jason is Assistant Director, External Collaborations at Cold Spring Harbor Laboratory’s DNA Learning Center (www.dnalc.org) 
+and is the Education, Outreach, and Training lead for CyVerse. Jason organizes, instructs, and speaks at more than dozen 
+bioinformatics workshops annually. In addition to Cold Spring Harbor, Jason is faculty at Yeshiva University in New York, 
+where he created and instructs a research program for their Girl's High School. Jason also serves on committees and boards 
+for several projects that advance science and science.
     <br/>
-    <strong>Steering Committee (Treasurer)</strong>
+    <strong>Steering Committee </strong>
 </p>
