Blog post about new lesson maintainers (and Windows installer maintainer)

--- a/_includes/people/bray_e.html
+++ b/_includes/people/bray_e.html
@@ -5,4 +5,6 @@
     software.  His software experience ranges from web development to
     kernel hacking, and in his "free" time he's working on an MS in
     Applied Physics.
+    <br/>
+    <strong>Maintainer: <a href="{{site.github_url}}/windows-installer">Windows Installer</a></strong>
 </p>
