--- a/_includes/people/chen_daniel.html
+++ b/_includes/people/chen_daniel.html
@@ -8,4 +8,6 @@
     <a href="http://www.mailman.columbia.edu">Mailman School of Public Health</a> in Epidemiology and
     is interested in integrating hospital data in order to perform predictive health analytics
     and build clinical support tools for clinicians.
+    <br/>
+    <strong>Maintainer: <a href="{{site.github_url}}/r-novice-inflammation">Programming with R</a></strong>
 </p>
