--- a/_includes/people/dashnow_harriet.html
+++ b/_includes/people/dashnow_harriet.html
@@ -9,4 +9,6 @@
     teaching both the undergraduate and graduate level with a
     particular focus on skills workshops in such areas as genomics,
     Python, R, Unix and Git version control.
+    <br/>
+    <strong>Maintainer: <a href="{{site.github_url}}/r-novice-inflammation">Programming with R</a></strong>
 </p>
