--- a/_includes/people/wilson_g.html
+++ b/_includes/people/wilson_g.html
@@ -1,9 +1,13 @@
 <p id="wilson_g" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/wilson_g.jpg' alt='Greg Wilson' />">
     <a href="http://www.third-bit.com" class="person">Greg Wilson</a>
-    started the Software Carpentry project in 1998. He has been a
+    co-founded the Software Carpentry project in 1998. He has been a
     professional software developer, an author, and a university
     professor. Greg received his PhD in Computer Science from the
     University of Edinburgh in 1993.
     <br/>
-    <strong>Instructor Trainer</strong>
+    <strong>Co-Founder</strong>
+    <br/>
+    <strong>Director of Instructor Training</strong>
+    <br/>
+    <strong>Maintainer: <a href="{{site.github_url}}/instructor-training">Instructor Training</a></strong>
 </p>
