Adding a bunch of newly-qualified instructors

--- a/_includes/people/oleary_aaron.html
+++ b/_includes/people/oleary_aaron.html
@@ -1,4 +1,4 @@
-<p id="oleary_aaron" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/oleary_aaron.jpg' alt='Aaron O'Leary' />">
+<p id="oleary_aaron" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/oleary_aaron.jpg' alt='Aaron OLeary' />">
       <span class="person">Aaron O'Leary</span>
       is a PhD student at the University of Leeds, performing lab and field
       work looking at the dynamics of storms and doing lots of time series
