--- a/_includes/people/ocais_alan.html
+++ b/_includes/people/ocais_alan.html
@@ -1,4 +1,4 @@
-<p id="ocais_alan" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/ocais_alan.jpg' alt='Alan O'Cais' />">
+<p id="ocais_alan" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/ocais_alan.jpg' alt='Alan OCais' />">
     <span class="person">Alan O'Cais</span>
     is a theoretical physicist by trade (PhD from Trinity College
     Dublin in 2006) who has spent the last number of years working
