--- a/_includes/people/bray_e.html
+++ b/_includes/people/bray_e.html
@@ -1,10 +1,8 @@
 <p id="bray_e" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/bray_e.jpg' alt='Erik Bray' />">
-    <span class="person">Erik Bray</span> is a software engineer in
-    the science software branch at Space Telescope Science Institute,
-    where he works primarily on supporting Hubble and JWST science
-    software.  His software experience ranges from web development to
-    kernel hacking, and in his "free" time he's working on an MS in
-    Applied Physics.
+    <span class="person">Erik Bray</span> is a research engineer at Laboratoire de Recherche en Informatique
+    where he works on the <a href="http://opendreamkit.org/">OpenDreamKit</a> project, and was formerly a
+    software engineer at Space Telescope Science Institute. His software experience ranges from web
+    development to kernel hacking, and in his "free" time he studies particle physics.
     <br/>
     <strong>Maintainer: <a href="{{site.github_url}}/windows-installer">Windows Installer</a></strong>
 </p>
