--- a/_includes/orgs/cyverse.html
+++ b/_includes/orgs/cyverse.html
@@ -1,5 +1,6 @@
-<p class="imgpar" id="iplant">
-  <img src="{{site.filesurl}}/orgs/iplant.png" alt="iPlant" />
-  The <a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a>'s mission is
-  to provide access to cyberinfrastructure for the broad life science community.
+<p class="imgpar" id="cyverse">
+  <img src="{{site.filesurl}}/orgs/cyverse.png" alt="CyVerse" />
+  <a href="http://www.cyverse.org/">CyVerse's</a> mission to design, deploy,
+  and expand a national cyberinfrastructure for life sciences research
+  and train scientists in its use.
 </p>
