--- a/_includes/projects/pyrdm.html
+++ b/_includes/projects/pyrdm.html
@@ -1,4 +1,4 @@
-<p class="imgpar" id="pyne">
+<p class="imgpar" id="pyrdm">
   <img src="{{site.filesurl}}/projects/pyrdm.png" alt="PyRDM" />
   <a href="http://pyrdm.readthedocs.org" class="project">PyRDM</a>
   is a Python-based library for research data management (RDM). 
