--- a/_includes/people/kazmi_saira.html
+++ b/_includes/people/kazmi_saira.html
@@ -1,7 +1,7 @@
 <p id="kazmi_saira" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/kazmi_saira.jpg' alt='Saira Kazmi' />">
     <span class="person">Saira Kazmi</span> is currently working as
-    the Scientific Data Architect for the Information and Research
-    Technologies group at <a href="https://www.jax.org/">the Jackson
+    the Scientific Data Architect for the Research Information 
+    Technologies group at <a href="https://www.jax.org/">The Jackson
     Laboratory for Genomic Medicine</a> in Farmington,
     Connecticut. She loves working with high dimensional data; and
     enjoys designing and implementing solutions for problems that are
