--- a/_includes/people/lagesen_k.html
+++ b/_includes/people/lagesen_k.html
@@ -7,5 +7,5 @@
     students and believes that this should be an integral part of any
     biologist's toolbox.
     <br/>
-    <strong>Steering Committee (Secretary)</strong>
+    <strong>Steering Committee (Vice-Chair)</strong>
 </p>
