--- a/_includes/people/harris_rayna.html
+++ b/_includes/people/harris_rayna.html
@@ -4,4 +4,6 @@
     Austin. She studies the neuromolecular basis of social behavior
     and is involved in several initiatives to enhance training in the
     life sciences.
+    <br/>
+    <strong>Steering Committee (2016 Member) </strong>
 </p>
