remove SCF reference

--- a/_includes/people/chuang-howe_a.html
+++ b/_includes/people/chuang-howe_a.html
@@ -4,5 +4,5 @@
     Biosystems Engineering at Iowa State University, where she uses
     skills learned from Software Carpentry to train students and study
     microbial communities in the environment. Adina is a former member 
-    of the Software Carpentry Foundation's Steering Committee.
+    of the Steering Committee.
 </p>
