Adding markers for more instructor trainers

--- a/_includes/people/harris_rayna.html
+++ b/_includes/people/harris_rayna.html
@@ -5,5 +5,7 @@
     and is involved in several initiatives to enhance training in the
     life sciences.
     <br/>
+    <strong>Instructor Trainer</strong>
+    <br/>
     <strong>Steering Committee (2016 Member) </strong>
 </p>
