--- a/_includes/people/wilson_g.html
+++ b/_includes/people/wilson_g.html
@@ -9,5 +9,7 @@
     <br/>
     <strong>Director of Instructor Training</strong>
     <br/>
+    <strong>Instructor Trainer</strong>
+    <br/>
     <strong>Maintainer: <a href="{{site.github_url}}/instructor-training">Instructor Training</a></strong>
 </p>
