--- a/_includes/people/wilson_g.html
+++ b/_includes/people/wilson_g.html
@@ -1,5 +1,5 @@
 <p id="wilson_g" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/wilson_g.jpg' alt='Greg Wilson' />">
-    <a href="http://www.third-bit.com" class="person">Greg Wilson</a>
+    <a href="http://third-bit.com" class="person">Greg Wilson</a>
     co-founded the Software Carpentry project in 1998. He has been a
     professional software developer, an author, and a university
     professor. Greg received his PhD in Computer Science from the
