Two more instructor trainers

--- a/_includes/people/weaver_belinda.html
+++ b/_includes/people/weaver_belinda.html
@@ -7,4 +7,6 @@
     Belinda tweets as <a href="https://twitter.com/cloudaus">@cloudaus</a>.
     <br/>
     <strong>Steering Committee (2016 Member) </strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
