--- a/_includes/people/walsh_alistair.html
+++ b/_includes/people/walsh_alistair.html
@@ -9,4 +9,6 @@
     biological sensors in human factors research.  Alistair is the
     co-ordinator of NeuralCode at Swinburne University, Hawthorn,
     which is a resource for brain scientists to learn coding.
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
