add instructor bios

--- a/_includes/people/fraser_andrew.html
+++ b/_includes/people/fraser_andrew.html
@@ -1,8 +1,2 @@
 <p id="fraser_andrew" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/fraser_andrew.jpg' alt='Andrew Fraser' />">
-    <span class="person">Andrew Fraser</span> is a scientist in the
-    Computational Physics Division of Los Alamos National Laboratory.
-    He has a PhD in Physics from UT Austin.  In 2008 when his book
-    <em>Hidden Markov Models and Dynaimcal Systems<em> was published,
-    one could build it from source that he distributed with a single
-    "make" invocation.
-</p>
+<span class="person">Andrew Fraser</span> is a scientist in the Computational Physics Division of Los Alamos National Laboratory.  He has a PhD in Physics from UT Austin. In 2008 when his book "Hidden Markov Models and Dynaimcal Systems" was published, one could build it from source that he distributed with a single "make" invocation. </p>
