Update Erin Becker's bio
Add new roles

--- a/_includes/people/becker_erin.html
+++ b/_includes/people/becker_erin.html
@@ -4,4 +4,10 @@
     Research. She has experience developing and implementing
     practice-based instructional training programs as well as building
     community for supporting instructional innovation.
+    <br/>
+    <strong>Director of Instructor Training</strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
+    <br/>
+    <strong>Maintainer: <a href="{{site.github_url}}/instructor-training">Instructor Training</a></strong>
 </p>
