Update Christina Koch's bio
Add maintainer

--- a/_includes/people/koch_christina.html
+++ b/_includes/people/koch_christina.html
@@ -7,4 +7,6 @@
     researchers and campus compute resources.  
     <br/>
     <strong>Instructor Trainer</strong>
+    <br/>
+    <strong>Maintainer: <a href="{{site.github_url}}/instructor-training">Instructor Training</a></strong>
 </p>
