add steering committee

--- a/_includes/people/koch_christina.html
+++ b/_includes/people/koch_christina.html
@@ -9,4 +9,6 @@
     <strong>Instructor Trainer</strong>
     <br/>
     <strong>Maintainer: <a href="{{site.github_url}}/instructor-training">Instructor Training</a></strong>
+    <br/>
+    <strong>Steering Committee (2017 Member)</strong>
 </p>
