--- a/_includes/people/gustavsen_j.html
+++ b/_includes/people/gustavsen_j.html
@@ -1,7 +1,4 @@
 <p id="gustavsen_j" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/gustavsen_j.jpg' alt='Julia Gustavsen' />">
   <a href="http://www.juliagustavsen.com" class="person">Julia Gustavsen</a>
-    is a PhD student at the University of British Columbia in Biological 
-    Oceanography. Her thesis work focuses on the changes in marine 
-    viral communities over time and space. She received her 
-    BA and BSc from the University of New Brunswick.
+is currently a bioinformatician working at Sophia Genetics near Lausanne, Switzerland. She received her PhD from the Unversity of British Columbia where she researched the temporal dynamics of marine viruses and their potential hosts.
 </p>
