--- a/_includes/people/hertweck_kate.html
+++ b/_includes/people/hertweck_kate.html
@@ -9,5 +9,5 @@
     University of Missouri (Ph.D.), and NESCent/Duke University
     (postdoctoral fellow).
     <br/>
-    <strong>Steering Committee (2016 Member) </strong>
+    <strong>Steering Committee (2016 Member, 2017 Chair) </strong>
 </p>
