--- a/_includes/people/harris_rayna.html
+++ b/_includes/people/harris_rayna.html
@@ -7,5 +7,5 @@
     <br/>
     <strong>Instructor Trainer</strong>
     <br/>
-    <strong>Steering Committee (2016 Member) </strong>
+    <strong>Steering Committee (2016 Member, 2017 Secretary) </strong>
 </p>
