--- a/_includes/people/koch_christina.html
+++ b/_includes/people/koch_christina.html
@@ -10,5 +10,5 @@
     <br/>
     <strong>Maintainer: <a href="{{site.github_url}}/instructor-training">Instructor Training</a></strong>
     <br/>
-    <strong>Steering Committee (2017 Member)</strong>
+    <strong>Steering Committee (2017 Vice-Chair)</strong>
 </p>
