--- a/_includes/people/kuzak_mateusz.html
+++ b/_includes/people/kuzak_mateusz.html
@@ -5,4 +5,6 @@
     and is passionate about Open Source, teaching and Web. He is
     currently working on various research software, programming mostly
     in R, Python and Javascript.
+    <br/>
+   <strong>Steering Committee (2017 Member) </strong>
 </p>
