--- a/_includes/people/weaver_belinda.html
+++ b/_includes/people/weaver_belinda.html
@@ -6,7 +6,7 @@
     she leads a team of nine eResearch Analysts statewide.
     Belinda tweets as <a href="https://twitter.com/cloudaus">@cloudaus</a>.
     <br/>
-    <strong>Steering Committee (2016 Member) </strong>
+    <strong>Steering Committee (2016, 2017 Member) </strong>
     <br/>
     <strong>Instructor Trainer</strong>
 </p>
