--- a/_includes/people/lagesen_k.html
+++ b/_includes/people/lagesen_k.html
@@ -9,5 +9,5 @@
     <br/>
     <strong>Instructor Trainer</strong>
     <br/>
-    <strong>Steering Committee (2016 Vice-Chair, 2015 Secretary)</strong>
+    <strong>Steering Committee (2017 Member, 2016 Vice-Chair, 2015 Secretary)</strong>
 </p>
