--- a/_includes/people/gan_emilia.html
+++ b/_includes/people/gan_emilia.html
@@ -1,9 +1,2 @@
-<p id="gan_emilia" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/gan_emilia.jpg' alt='Emilia Gan' />">
-    <a href="https://github.com/efran" class="person">Emilia Gan</a>
-    is a student in the Pathobiology PhD Program at the University of
-    Washington.  She is a graduate of MIT (BS - Materials Science and
-    Engineering) and the University of Massachusetts Medical School.
-    Before entering grad school, Emilia homeschooled her three
-    children and taught part-time at Bellevue College while taking
-    math and CS classes.
-</p>
+<p id="gan_emilia" data-toggle="tooltip" title="<img src={{site.filesurl}}/people/gan_emilia.jpg alt=Emilia Gan />">
+<span class="person">Emilia Gan</span> is a PhD student in Computer Science and Engineering at the University of Washington in Seattle. She also has a BS in Materials Science and Engineering from MIT, an MD from the University of Massachusetts Medical School, and an MS from the Pathobiology Program at the University of Washington. She is interested in how people learn programming concepts and what experiences influence new programmers’ views towards programming. </p>
