--- a/_includes/people/standage_daniel.html
+++ b/_includes/people/standage_daniel.html
@@ -1,9 +1,2 @@
 <p id="standage_daniel" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/standage_daniel.jpg' alt='Daniel Standage' />">
-    <span class="person">Daniel Standage</span>
-    is a Ph.D. candidate in the Computational Genome Science Lab at
-    Indiana University. His general research interests are in genome
-    biology and genome informatics, with a particular focus on genome
-    annotation and analysis of high-throughput sequence data. When
-    he's not writing research software or cleaning up data, he enjoys
-    hiking/camping with his family and cooking breakfast.
-</p>
+<span class="person">Daniel Standage</span> is a postdoctoral scholar in the Lab for Data Intensive Biology at UC Davis. He has broad research interests in eukaryotic genome biology and genome informatics, with a specific focus on genome annotation and variant discovery. When he's not writing research software or cleaning up data, he enjoys hiking/camping with his family and cooking breakfast. </p>
