Add instructor trainer Jason Williams

--- a/_includes/people/williams_jason.html
+++ b/_includes/people/williams_jason.html
@@ -7,4 +7,6 @@ where he created and instructs a research program for their Girl's High School. 
 for several projects that advance science and science.
     <br/>
     <strong>Steering Committee (2016 Chair, 2015 Member) </strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
