Add instructor trainer Allegra Via

--- a/_includes/people/via_allegra.html
+++ b/_includes/people/via_allegra.html
@@ -10,4 +10,6 @@
     in the design, organisation and delivery of bioinformatics
     training courses, Train-The-Trainer activities, and collaborations
     on many training-related initiatives with other ELIXIR's nodes.
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
