Add instructor trainer Tim Dennis

--- a/_includes/people/dennis_tim.html
+++ b/_includes/people/dennis_tim.html
@@ -5,4 +5,6 @@
     a regular user of R, Python, SQL and command-line tools and has
     extensive experience helping researchers and students with these
     tools.
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
