Updating list of Steering Committee members.
1.  Updated list on `/scf/` page.
2.  Fixed entries for new Steering Committee members.

--- a/_includes/people/mcclatchy_sue.html
+++ b/_includes/people/mcclatchy_sue.html
@@ -7,4 +7,6 @@
     in the U.S. and Latin America. 
     <br/>
     <strong>Instructor Trainer</strong>
+    <br/>
+    <strong>Steering Committee (2017 Member) </strong>
 </p>
