--- a/_includes/people/hamm_christopher.html
+++ b/_includes/people/hamm_christopher.html
@@ -1,8 +1,7 @@
 <p id="hamm_christopher" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/hamm_christopher.jpg' alt='Christopher Hamm' />">
-    <a href="http://butterflyology.net/" class="person">Christopher
-    Hamm</a> is a postdoc in the Department of Ecology and
-    Evolutionary Biology at the University of Kansas. His research
-    focuses on the evolution and ecology of insects (mostly
+    <a href="http://butterflyology.github.io/" class="person">Chris
+    Hamm</a> is a data scientist for Monsanto in Woodland, CA. His academic research
+    focuses on the ecology and evolution of insects (mostly
     butterflies). Chris earned his his PhD from Michigan State
     Universty in 2012 and his dog's name is Larry.
 </p>
