--- a/_includes/people/cranston_k.html
+++ b/_includes/people/cranston_k.html
@@ -8,4 +8,7 @@
     biology. Karen is the lead PI
     of <a href="http://opentreeoflife.org">Open Tree of Life</a>, an
     NSF-funded project to synthesize published evolutionary trees.
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
+
