--- a/_includes/people/duckles_jonah.html
+++ b/_includes/people/duckles_jonah.html
@@ -3,4 +3,6 @@
     is the Executive Director of the Software Carpentry Foundation. He has had various career trajectories including, long-term strategic planning, landscape ecology research, monitoring of global agricultural production and collaborating on the computational workflows of scientists. Now he helps scientists to more effective in their data-driven analysis by spreading the practices of Software Carpentry to organizations around the world.
     <br/>
     <strong>Executive Director</strong>
+    <br/>
+    <strong>Instructor Trainer</strong>
 </p>
