changing for Belinda's new role

--- a/_includes/people/duckles_jonah.html
+++ b/_includes/people/duckles_jonah.html
@@ -1,8 +1,12 @@
 <p id="duckles_jonah" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/duckles_jonah.jpg' alt='Jonah Duckles' />">
     <a href="mailto:jduckles@software-carpentry.org" class="person">Jonah Duckles</a>
-    is the Executive Director of the Software Carpentry Foundation. He has had various career trajectories including, long-term strategic planning, landscape ecology research, monitoring of global agricultural production and collaborating on the computational workflows of scientists. Now he helps scientists to more effective in their data-driven analysis by spreading the practices of Software Carpentry to organizations around the world.
+    is the Executive Director of the Software Carpentry Foundation. He has had
+    various career trajectories including, long-term strategic planning,
+    landscape ecology research, monitoring of global agricultural production
+    and collaborating on the computational workflows of scientists.
+    Now he helps researchers by spreading the practices of
+    Software Carpentry to organizations around the world. He is on
+    Twitter as <a href="https://twitter.com/jduckles">@jduckles</a>.
     <br/>
-    <strong>Executive Director</strong>
-    <br/>
-    <strong>Instructor Trainer</strong>
+    <strong>Executive Director, Instructor Trainer</strong>
 </p>
