--- a/_includes/people/weaver_belinda.html
+++ b/_includes/people/weaver_belinda.html
@@ -1,12 +1,11 @@
 <p id="weaver_belinda" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/weaver_belinda.jpg' alt='Belinda Weaver' />">
     <span class="person">Belinda Weaver</span>
-    works for the <a href="http://www.qcif.edu.au">Queensland Cyber Infrastructure Foundation</a>,
+    is our Community Development Lead, she most recently
+    worked for the <a href="http://www.qcif.edu.au">Queensland Cyber Infrastructure Foundation</a>,
     which provides eResearch infrastructure, including cloud resources, to Queensland universities.
     Based at <a href="http://www.uq.edu.au/">The University of Queensland</a> in Brisbane, Australia,
     she leads a team of nine eResearch Analysts statewide.
     Belinda tweets as <a href="https://twitter.com/cloudaus">@cloudaus</a>.
     <br/>
-    <strong>Instructor Trainer</strong>
-    <br/>
-    <strong>Steering Committee (2016, 2017 Member) </strong>
+    <strong>Instructor Trainer, Steering Committee (2016, 2017 Member) </strong>
 </p>
