--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ format: page-fullwidth
 
       <span itemprop="articleSection">
       <div class="row">
-      <div class="small-8 columns">
+      <div class="large-8 columns">
       {{ content }}
       </div>
     </div>
