--- a/_includes/people/levernier_jacob.html
+++ b/_includes/people/levernier_jacob.html
@@ -1,10 +1,3 @@
-<p id="levernier_jacob" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/levernier_jacob.jpg' alt='Jacob Levernier' />">
-    <a href="http://adunumdatum.org/" class="person">Jacob
-    Levernier</a> is a PhD student in Psychology at the
-    University of Oregon, studying moral development, research ethics
-    with digital data, and applied statistics. Jacob works between the
-    disciplines of Psychology, Philosophy, and Computer Science. His
-    interest in scientific computing centers on data management and
-    workflow automation, both in the social sciences and related
-    disciplines, including library science.
-</p>
+<p id="levernier_jacob" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/levernier_jacob.jpg' alt='Jacob Levernier' />"> <span class="person">Jacob Levernier</span>  holds a PhD in Personality and Social Psychology from the University of Oregon. He is currently the CLIR Bollinger Postdoctoral Fellow in Library Innovation at the University of Pennsylvania. His interest in scientific computing centers on data management and workflow automation, both in the social sciences and related disciplines, including library science. </p>
+
+
