--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,13 @@
 </head>
 <body id="top-of-page" class="{{ page.format }}">
 
+  {% include navigation %}
+
 	{% include masthead %}
 
 	{{ content }}
+
+  {% include footer %}
 
 	{% include footer_scripts %}
 </body>
