--- a/_includes/people/elsheikh_samar.html
+++ b/_includes/people/elsheikh_samar.html
@@ -1,4 +1,4 @@
-<p id="elsheikh_samar" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/samar_elsheikh.jpg' alt='Samar Elsheikh' />">
+<p id="elsheikh_samar" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/samar_elsheikh_thumb.jpg' alt='Samar Elsheikh' />">
     <span class="person">Samar Elsheikh</span>
     is a statistician by training. She is currently a PhD candidate in Bioinformatics at the Computational Biology Group 
     in the University of Cape Town, South Africa.     Her research focus is in GWAS (Genome-Wide Association Studies) and 
