lots of new bios to add to website

--- a/_includes/people/hodge_amy.html
+++ b/_includes/people/hodge_amy.html
@@ -1,12 +1,4 @@
 <p id="hodge_amy" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/hodge_amy.jpg' alt='Amy Hodge' />">
-    Since July 2012, <span class="person">Amy Hodge</span> has served
-    as the Science Data Librarian at Stanford University Libraries,
-    where she helps Stanford researchers with all aspects of data
-    management, including teaching best practices for data
-    organization and analysis. Before joining the Libraries, she spent
-    nearly ten years in the business world working on science
-    databases and learning the beauty of SQL. Amy has a PhD in
-    Molecular Biophysics and Biochemistry from Yale University, where
-    she studied ubiquitin-mediated regulation of the Saccharomyces
-    cerevisiae cell cycle.
-</p>
+<span class="person">Amy Hodge</span> is the Science Data Librarian for Stanford University Libraries, where, among other things, she provides Carpentries training to groups all over campus. Amy received a PhD from Yale in Molecular Biophysics and Biochemistry and spent her pre-library career working for science database companies and learning the beauty of SQL. She prefers enabling others to do better science rather than doing science herself. She quilts and knits and cooks, and last fall she turned one wall of her bedroom into a giant paint-by-number mural (<a href="http://www.amyalamode.com/blog/2016/10/02/wall-sized-paint-by-number/">http://www.amyalamode.com/blog/2016/10/02/wall-sized-paint-by-number/</a>) </p>
+
+
