--- a/_includes/people/laken_benjamin.html
+++ b/_includes/people/laken_benjamin.html
@@ -1,7 +1,5 @@
+
 <p id="laken_benjamin" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/laken_benjamin.jpg' alt='Benjamin Laken' />">
-    <span class="person">Benjamin Laken</span> has a background in
-    Physical Geography and climate change, and holds a PhD from Sussex
-    University. He has been a postdoc researcher in Spain and Norway,
-    and currently works as a Research Software Engineer at UCL,
-    England.
-</p>
+<span class="person">Benjamin Laken</span> has a background in Physical Geography. For several years after his PhD from Sussex University he was a researcher on projects relating to climatology at numerous Universities, over that time he moved towards areas connected to Scientific Software development and Open Science practices. In 2017 he moved into the private sector, and now works as a Data Scientist at Vizzuality, where he contributes to projects that leverage large geospatial datasets to encourage environmental sustainability and responsible stewardship of our planetary resources. </p>
+
+
