--- a/_includes/people/nenadic_aleksandra.html
+++ b/_includes/people/nenadic_aleksandra.html
@@ -1,10 +1,4 @@
-<p id="nenadic_aleksandra" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/nenadic_aleksandra.png' alt='Aleksandra Nenadic' />">
-    <a href="http://orcid.org/0000-0002-2269-3894" class="person">Aleksandra Nenadic</a>
-    is ELIXIR-UK's Training Coordinator for ICT and Software, based at
-    the School of Computer Science, University of Manchester, where
-    she also completed a PhD in Internet security. She currently also
-    oversees <a href="https://www.biocatalogue.org/">BioCatalogue</a>,
-    is involved with the <a href="http://software.ac.uk">Software
-    Sustainability Institute</a>, and when she has time still programs
-    in Java and Ruby on Rails.
-</p>
+
+<p id=”nenadic_aleksandra" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/pawlik_a.jpg' alt='Aleksandra Nenadic />">
+<span class="person">Aleksandra Nenadic</span> is the Training Lead at the Software Sustainability Institute, UK, which she joined in June 2016 from her position as Training Coordinator for Infrastructure Technology within the UK node of the ELIXIR life sciences consortium. There, she was responsible for managing technical training (predominantly rolling out Software and Data Carpentry programme within European life sciences community) and the development of training portal TeSS. In her current role, Aleksandra is helping to strengthen and grow the Carpentry community in the UK - by organising, managing and running the Carpentry programme, and supporting UK institutions in becoming Carpentry partners in their own right. She holds a BSc in Mathematics and Computer Science and a PhD in Internet Security. </p>
+
