--- a/_includes/people/williford_anna.html
+++ b/_includes/people/williford_anna.html
@@ -1,10 +1,4 @@
 <p id="williford_anna" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/williford_anna.jpg' alt='Anna Williford' />">
-    <span class="person">Anna Williford</span> is a research scientist
-    at the University of Texas at Arlington with a PhD from the
-    University of Iowa in evolutionary biology.  Her research relies
-    heavily on the analysis of next generation sequence data in hope
-    of identifying genetic changes that contribute to functional
-    divergence within and between species. It seems like whenever she
-    is not doing NGS analysis, she is preparing for some sort of
-    Software Carpentry activity (and loving it!)
-</p>
+<span class="person">Anna Williford</span> is a research scientist at the University of Texas at Arlington with a PhD from the University of Iowa in evolutionary biology. She spends most of her time working with the next generation sequence data, teaching and organizing Software Carpentry workshops at UT Arlington. </p>
+
+
