--- a/_includes/people/stevens_sarah.html
+++ b/_includes/people/stevens_sarah.html
@@ -1,11 +1,12 @@
 <p id="stevens_sarah" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/stevens_sarah.jpg' alt='Sarah Stevens' />">
-    <a href="https://goo.gl/qeHIjy" class="person">Sarah Stevens</a>
+    <a href="http://sarahlrstevens.info/" class="person">Sarah Stevens</a>
     is a Ph.D candidate in Microbiology at the University of Wisconsin
     - Madison.  She works in the
     <a href="https://mcmahonlab.wisc.edu/">McMahon Lab</a>,
     studying how the whole genomes of freshwater bacterial populations
-    change through time.  She also organizes a
-    <a href="https://goo.gl/G62AaW">Molecular Microbial Ecology and
-    Evolution</a> (MoMiEE) focus group, bringing together scientists
-    at UW-Madison to learn computational/bioinformatics methods.
+    change through time.  She founded group for
+    <a href="https://combee-uw-madison.github.io">Computatational Biology, Ecology, and
+    Evolution</a> (ComBEE), which brings together scientists
+    at UW-Madison to learn computational/bioinformatics methods and hosts R/python 
+    study groups.
 </p>
