Fixing website link for Wei Le

--- a/_includes/people/le_wei.html
+++ b/_includes/people/le_wei.html
@@ -1,2 +1,2 @@
 <p id="le_wei" data-toggle="tooltip" title="<img src={{site.filesurl}}/people/le_wei.jpg alt=Wei Le />">
-<span class="person">Wei Le</span> (http://web.cs.iastate.edu/~weile/) is a faculty member in the Department of Computer Science at the Iowa State University in USA. Her research focuses on developing fundamentals and applications of program analysis and automatic testing to improve software reliability, security and performance. </p>
+<a href="http://web.cs.iastate.edu/~weile/" class="person">Wei Le</a> is a faculty member in the Department of Computer Science at Iowa State University in USA. Her research focuses on developing fundamentals and applications of program analysis and automatic testing to improve software reliability, security and performance. </p>
