Updated URL to new headshot
@weaverbel

--- a/_includes/people/jordan_kari.html
+++ b/_includes/people/jordan_kari.html
@@ -1,4 +1,4 @@
-<p id="jordan_kari" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/jordan_kari.png' alt='Kari Jordan' />">
+<p id="jordan_kari" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/jordan_karil.png' alt='Kari Jordan' />">
 <span class="person">Kari Jordan</span> studied mechanical engineering at Michigan Technological University. Her doctoral research explored self-efficacy of underrepresented engineering students. After completing a post-doc in the Engineering Fundamentals Department at Embry-Riddle Aeronautical University, she was hired to lead Data Carpentry's Assessment Efforts. Kari enjoys running the <a href="http://engineerlikeagirl.org">Engineer Like a Girl</a>after school program in her free time, and teaching <a href="http://karij.zumba.com">Zumba</a> fitness. Kari tweets at <a href="https://twitter.com/drkariljordan">@drkariljordan</a>
 <br/>
 <strong>Data Carpentry Deputy Director of Assessment</strong>
