--- a/_includes/people/gates_jason.html
+++ b/_includes/people/gates_jason.html
@@ -1,2 +1,2 @@
-<p id="obama_barack" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/obama_barack.jpg' alt='Barack Obama' />">
-<span class="person">Barack Obama</span> was the 44th President of the United States.  He was elected in 2008 and again in 2012. </p>
+<p id="gates_jason" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/gates_jason.jpg' alt='Jason Gates' />">
+<span class="person">Jason Gates</span> is a scientific software engineer in the Computational Mathematics department of Sandia National Laboratories in Albuquerque, New Mexico. While he has a background in applied math and engineering physics, his primary motivation these days is to help people do software well. Teaching is his passion, and he looks for outlets for it wherever he can find them.</p>
