Minor fixes to instructor profile page

--- a/_includes/people/ogrady_tina.html
+++ b/_includes/people/ogrady_tina.html
@@ -1,3 +1,3 @@
 <p id="ogrady_tina" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/ogrady_tina.jpg' alt='Tina OGrady' />">
-    <span class="person">Tina O'Grady</span> Tina O'Grady is a postdoc at the Université de Liège in Belgium. She uses high-throughput sequencing to study cell communication, RNA processing, viral transcriptomes and anything else she can think of. A former librarian, she loves to work with both data and the people who use data.
+    <span class="person">Tina O'Grady</span> is a postdoc at the Université de Liège in Belgium. She uses high-throughput sequencing to study cell communication, RNA processing, viral transcriptomes and anything else she can think of. A former librarian, she loves to work with both data and the people who use data.
 </p>
