--- a/_includes/people/zuniga_juan-carlos.html
+++ b/_includes/people/zuniga_juan-carlos.html
@@ -1,4 +1,4 @@
-<p id="zuniga_juan-carlos" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/zuniga_juan-carlos.jpg' alt='Juan Carlos Zuniga' />">
+<p id="zuniga_juan-carlos">
     <span class="person">Juan Carlos Zuniga</span> is a research
     software engineer. He has a PhD in systems theory and is
     specialized in the development of fast algorithms for matrix and
