--- a/_includes/people/moore_nathan.html
+++ b/_includes/people/moore_nathan.html
@@ -1,6 +1,6 @@
 <p id="moore_nathan" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/moore_nathan.jpg' alt='Nathan Moore' />">
     <span class="person">Nathan Moore</span> teaches physics on
-    Minnesota's south-east coat, at Winona State University.  His PhD
+    Minnesota's south-east coast, at Winona State University.  His PhD
     work involved computational models of knotted loops of DNA, and in
     teaching undergraduates, his interests have expanded to include
     electronics, Arduino interfacing, and teaching elementary school
