--- a/_includes/people/slem_nelly.html
+++ b/_includes/people/slem_nelly.html
@@ -1,4 +1,4 @@
-<p id="slem_nelly" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/slem_nelly.jpg' alt='Nelly Sélem' />">
+<p id="slem_nelly" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/slem_nelly.png' alt='Nelly Sélem' />">
 <span class="person">Nelly Sélem</span> is an Integrative Biology PhD student, mathematician, r-markdown fan and ice hockey player and is currently developing perl comparative genomic tools at EvodivMet Lab at Langebio-Cinvestav. She used to be a math professor at National Polytechnical Institute. </p>
 
 
