--- a/_includes/orgs/nwu-sa.html
+++ b/_includes/orgs/nwu-sa.html
@@ -1,5 +1,5 @@
 <p class="imgpar" id="NWU-SA">
-  <img src="{{site.filesurl}}/orgs/nwu-sa.jpg" alt="North West University" />
+  <img src="{{site.filesurl}}/orgs/NWU full logo purple.jpg" alt="North West University" />
   <a href="https://nwu.ac.za/">North West University</a> 
   is Software and Data Carpentry’s first African Partner, 
   and has been heavily involved in the further development of 
