--- a/_includes/orgs/nwu-sa.html
+++ b/_includes/orgs/nwu-sa.html
@@ -3,6 +3,6 @@
   <a href="https://nwu.ac.za/">North West University</a> 
   is Software and Data Carpentry’s first African Partner, 
   and has been heavily involved in the further development of 
-  the Southern AFrican Carpentry Community.
+  the Southern African Carpentry Community.
   
 </p>
