--- a/_includes/people/harris_rayna.html
+++ b/_includes/people/harris_rayna.html
@@ -3,7 +3,7 @@
     Harris</a> graduated from the University of Texas in
     Austin with a PhD in Cell and Molecular Biology. 
     She enjoys particpating in the Software Carpentry community
-    to spread best practices for research and open education
+    to spread best practices for research and open education.
     <br/>
     <strong>Instructor Trainer, Maintainer</strong>
     <br/>
