Remove duplicate "the" & "and" from texts

--- a/_includes/people/harihareswara_sumana.html
+++ b/_includes/people/harihareswara_sumana.html
@@ -5,7 +5,7 @@
     of <a href="http://changeset.nyc/">Changeset Consulting</a>, which
     provides short-term project management and maintenance services to
     open source software projects. She holds an MS in Technology
-    Management from Columbia University and and a BA in political
+    Management from Columbia University and a BA in political
     science from UC Berkeley, and participated in
     the <a href="http://recurse.com/">Recurse Center</a> in 2013 and
     2014. Her past and present open source communities include
