--- a/_includes/people/matienzo_mark.html
+++ b/_includes/people/matienzo_mark.html
@@ -1,6 +1,6 @@
 <p id="matienzo_mark" data-toggle="tooltip" title="<img 
 src='{{site.filesurl}}/people/matienzo_mark.jpg' alt='Mark A. Matienzo' />">
-<span class="person">Mark A. Matienzo</span> is the Collaboration & Interoperability 
+<span class="person">Mark A. Matienzo</span> is the Collaboration and Interoperability 
 Architect in Digital Library Systems and Services at the Stanford University Libraries, 
 serving as a technologist, advocate, and facilitator for cross-institutional projects. 
 Prior to joining Stanford, Mark worked as an archivist, technologist, and strategist 
