--- a/_includes/people/johnston_luke.html
+++ b/_includes/people/johnston_luke.html
@@ -1,10 +1,12 @@
 <p id="johnston_luke" data-toggle="tooltip" title="<img src='{{site.filesurl}}/people/johnston_luke.jpg' alt='Luke Johnston' />">
-    <span class="person">Luke Johnston</span> is a PhD student at the
-    Department of Nutritional Sciences in the University of Toronto.
+    <span class="person"><a href="http://cv.lukewjohnston.com/">Luke Johnston</a></span> is a Postdoctoral researcher at the
+    Department of Public Health in Aarhus University, Denmark.
     His research is in diabetes epidemiology where he uses data to try
-    to understand how and why some individuals develop diabetes and
-    others don't.  Teaching proper coding skills and fostering
-    reproducible research is something he is very interested in, given
+    to understand how and why individuals develop type 2 diabetes. He's other work includes 
+    creating R packages and workflows to make it easier to do data analysis and reproducible research.
+    Almost all of his code for his projects is on <a href="https://github.com/lwjohnst86">GitHub</a>.
+    Teaching proper coding skills and fostering
+    reproducible research is something he is passionate about, especially considering
     that much of science relies on the results from these codes and
-    analyses.
+    analyses. Tweets from <a href="https://twitter.com/lwjohnst?lang=en">@lwjohnst</a>.
 </p>
