--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,9 +24,9 @@ format: post
 
 				<span itemprop="name">
 					{% if page.subheadline %}<p class="subheadline">{{ page.subheadline }}</p>{% endif %}
-					<h1>{{ page.title }}</h1>
+					<h1>{{ page.title sa }}</h1>
 					{% if page.author %}
-					<h2><em>{{ page.author }}</em></h2>
+					<h2><em>{{ page.authorasd }}</em></h2>
 					{% endif %}
 				</span>
 			</header>
