send email also

--- a/_includes/projects/tec.html
+++ b/_includes/projects/tec.html
@@ -7,4 +7,6 @@
   added.
   <br/>
   Contact: <a href="{{site.baseurl}}/team/#smith.j">Joshua Ryan Smith</a>
+  <a href="mailto:example@example.com?cc=john@example.com&bcc=jane@example.com">Send email</a>
+  <!--email us-->
 </p>
