Add language indicating blog is inactive

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,3 +5,4 @@ format: blog-index
 noindex: true
 ---
 {% include pagination %}
+<h1> Note: This blog is inactive. For updates from and about the Software Carpentry community, please visit <a href="https://carpentries.org/blog">The Carpentries blog</a></h1>
