--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -313,8 +313,9 @@ h3.masthead {
 
     #footer .social-icons li a {
         font-size: rem-calc(23);
+        padding: rem-calc(7); // font-size + 2*padding = width
         display: block;
-        width: 36px;
+        width: rem-calc(37);
         border-radius: 50%;
         color: $footer-bg;
         background: $footer-color;
