--- a/_sass/foundation-components/_top-bar.scss
+++ b/_sass/foundation-components/_top-bar.scss
@@ -284,6 +284,10 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
             }
           }
         }
+
+        .top-bar-section li > a {
+          color: $topbar-expanded-link-color;
+        }
       }
     }
 
@@ -426,7 +430,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
             margin-top: 0;
             font-size: $topbar-back-link-size;
             a {
-              color: $topbar-link-color;
+              color: $topbar-expanded-link-color;
               // line-height: ($topbar-height / 2);
               display: block;
               &:hover { background:none; }
